# TraceOrigin

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  sbom.json
cmd/tracer/: main.go
ebpf/: Makefile  file_tracker.c  http_parser.c  network_tracker.c  process_tracker.c
examples/: github-actions.yml  gitlab-ci.yml
pkg/alert/: manager.go
pkg/anomaly/: detector.go
pkg/cicd/: integrator.go
pkg/collector/: collector.go  ebpf_collector.go  event_collector.go
pkg/container/: resolver.go
pkg/correlator/: engine.go
pkg/export/: exporter.go
pkg/http/: parser.go
pkg/manifest/: parser.go
pkg/metrics/: collector.go
pkg/remediation/: engine.go
pkg/report/: generator.go
pkg/reputation/: database.go
pkg/sbom/: generator.go  spdx.go
pkg/scoring/: scorer.go
pkg/version/: extractor.go
scripts/: build-release.sh  install.sh
test/: run_tests.sh
test/dockerfiles/: test_npm.Dockerfile  test_pip.Dockerfile
test/manifests/: Gemfile  go.mod  package.json  requirements.txt
tests/: alert_manager_test.bak  anomaly_detection_test.go  cicd_test.go  collector_test.go  export_test.bak  export_test.go  integration_test.bak  integration_test.go  metrics_test.go  remediation_test.go  report_test.bak  reputation_test.bak  reputation_test.go  scoring_test.go  system_test.go  version_mismatch_test.bak  version_test.go
tests/dockerfiles/: Dockerfile.go  Dockerfile.nodejs  Dockerfile.python
tests/e2e/: e2e_test.go
tests/fixtures/manifests/: Cargo.toml  Gemfile  apt_packages.txt  go.mod  package.json  requirements.txt
(+9 files in other folders)
